added: added structure html for development

--- a/index.html
+++ b/index.html
@@ -13,7 +13,217 @@
 </head>
 
 <body>
-	<h1>Howdy FED2122</h1>
+
+	<header>
+		<nav>
+			<ul>
+				<li><button></button></li>
+				<li><button></button></li>
+				<li><a href="#"></a></li>
+				<li><button></button></li>
+			</ul>
+			<ul>
+				<li><a href="#"></a></li>
+				<li><a href="#"></a></li>
+			</ul>
+		</nav>
+
+	<!-- Female preview header -->
+
+		<figure>
+			<img src="#" alt="Previewer gym apparel">
+			<figcaption>
+				<h1></h1>
+				<p></p>
+				<a href="#"></a>
+			</figcaption>
+		</figure>
+	</header>
+
+	<!-- start Main -->
+
+	<main>
+
+		<!-- Female products section -->
+		<section>
+			<p></p>
+			<h2></h2>
+			<a href=""></a>
+
+			<ul>
+				<li>
+					<figure id="previewer-small">
+						<img src="" alt="">
+						<figcaption>
+							<p></p>
+							<h3></h3>
+							<p></p>
+							<p class="price-text"></p>
+						</figcaption>
+					</figure>
+				</li>
+
+				<li>
+					<figure id="previewer-small">
+						<img src="" alt="">
+						<figcaption>
+							<p></p>
+							<h3></h3>
+							<p></p>
+							<p class="price-text"></p>
+						</figcaption>
+					</figure>
+				</li>
+				
+			</ul>
+		</section>
+
+		<!-- Male previewer -->
+		<figure id="previewer-large">
+			<img src="#" alt="previewer gym apparel">
+			<figcaption>
+				<!-- same size as h1 -->
+				<h2></h2>
+				<p></p>
+				<a href="#"></a>
+			</figcaption>
+		</figure>
+
+		<!-- Male products section -->
+		<section>
+			<p></p>
+			<h2></h2>
+			<a href=""></a>
+
+			<ul>
+				<li>
+					<figure id="previewer-small">
+						<img src="" alt="">
+						<figcaption>
+							<p></p>
+							<h3></h3>
+							<p></p>
+							<p class="price-text"></p>
+						</figcaption>
+					</figure>
+				</li>
+
+				<li>
+					<figure id="previewer-small">
+						<img src="" alt="">
+						<figcaption>
+							<p></p>
+							<h3></h3>
+							<p></p>
+							<p class="price-text"></p>
+						</figcaption>
+					</figure>
+				</li>
+			</ul>
+		</section>
+
+		<!-- Together previewer -->
+		<figure id="previewer-large">
+			<img src="#" alt="previewer gym apparel">
+			<figcaption>
+				<!-- same size as h1 -->
+				<h2></h2>
+				<p></p>
+				<a href="#"></a>
+			</figcaption>
+		</figure>
+
+		<!-- double img previewer -->
+		<figure id="previewer-double">
+			<img src="#" alt="previewer gym apparel">
+			<figcaption>
+				<!-- same size as h1 -->
+				<h2></h2>
+				<a href="#"></a>
+			</figcaption>
+		</figure>
+		<figure id="previewer-double">
+			<img src="#" alt="previewer gym apparel">
+			<figcaption>
+				<!-- same size as h1 -->
+				<h2></h2>
+				<a href="#"></a>
+			</figcaption>
+		</figure>
+
+		<!-- discount slider with article -->
+		<ul>
+			<li>
+				<h2></h2>
+				<a href="#"></a>
+			</li>
+			<li></li>
+		</ul>
+
+		<article>
+			<h3></h3>
+			<p></p>
+		</article>
+	</main>
+
+	<footer>
+		<section>
+			<p><strong></strong><strong></strong><strong></strong></p>
+			<a href=""></a>
+
+			<a href=""></a>
+		</section>
+
+		<section>
+			<!-- help and pages buttons -->
+			<ul>
+				<li><button></button></li>
+				<li><button></button></li>
+			</ul>
+
+			<h3></h3>
+
+			<!-- blog and mail links -->
+			<figure>
+				<a href=""><img src="" alt=""></a>
+				<figcaption></figcaption>
+			</figure>
+			<figure>
+				<a href=""><img src="" alt=""></a>
+				<figcaption></figcaption>
+			</figure>
+
+			<!-- social links -->
+			<ul>
+				<li><a href=""></a></li>
+				<li><a href=""></a></li>
+				<li><a href=""></a></li>
+				<li><a href=""></a></li>
+				<li><a href=""></a></li>
+				<li><a href=""></a></li>
+			</ul>
+
+			<!-- terms of use, etc. links -->
+			<ul>
+				<li><a href=""></a></li>
+				<li><a href=""></a></li>
+				<li><a href=""></a></li>
+				<li><a href=""></a></li>
+				<li><a href=""></a></li>
+			</ul>
+
+			<!-- payment methods-->
+			<ul>
+				<li><img src="" alt=""></li>
+				<li><img src="" alt=""></li>
+				<li><img src="" alt=""></li>
+				<li><img src="" alt=""></li>
+				<li><img src="" alt=""></li>
+			</ul>
+			
+			<p></p>
+		</section>
+	</footer>
 
 	<script src="scripts/script.js"></script>
 </body>
