--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 	
 <head>
 	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
+	<meta name="author" content="Michel">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy FED2122</title>
+	<title>Gymshark namaak</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+	<!-- favicon source: https://nl.gymshark.com/ -->
+	<link rel="icon" type="image/svg+xml" href="images/Favicon-White-Circle_57x57.webp">
 </head>
 
 <body>
