--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 				<li><button></button></li>
 			</ul>
 			<ul>
-				<li><a href="#"></a></li>
-				<li><a href="#"></a></li>
+				<li><a href="#">Shop new mens</a></li>
+				<li><a href="#">Shop new womans</a></li>
 			</ul>
 		</nav>
 
@@ -34,9 +34,9 @@
 		<figure>
 			<img src="#" alt="Previewer gym apparel">
 			<figcaption>
-				<h1></h1>
-				<p></p>
-				<a href="#"></a>
+				<h1>All new adapt</h1>
+				<p>Feel good, perform better.</p>
+				<a href="#">Shop now</a>
 			</figcaption>
 		</figure>
 	</header>
@@ -47,31 +47,31 @@
 
 		<!-- Female products section -->
 		<section>
-			<p></p>
-			<h2></h2>
-			<a href=""></a>
+			<p>Womans</p>
+			<h2>New releases</h2>
+			<a href="">View all</a>
 
-			<ul>
+			<ul class="previewer-small">
 				<li>
-					<figure id="previewer-small">
+					<figure>
 						<img src="" alt="">
 						<figcaption>
-							<p></p>
-							<h3></h3>
-							<p></p>
-							<p class="price-text"></p>
+							<p>new</p>
+							<h3>Adapt Animal Seamless Zip Up</h3>
+							<p>Butterfly | Grey</p>
+							<p class="price">65€</p>
 						</figcaption>
 					</figure>
 				</li>
 
 				<li>
-					<figure id="previewer-small">
+					<figure>
 						<img src="" alt="">
 						<figcaption>
-							<p></p>
-							<h3></h3>
-							<p></p>
-							<p class="price-text"></p>
+							p>new</p>
+							<h3>Adapt Animal Seamless Zip Up</h3>
+							<p>Butterfly | Grey</p>
+							<p class="price">65€</p>
 						</figcaption>
 					</figure>
 				</li>
@@ -80,137 +80,151 @@
 		</section>
 
 		<!-- Male previewer -->
-		<figure id="previewer-large">
-			<img src="#" alt="previewer gym apparel">
-			<figcaption>
-				<!-- same size as h1 -->
-				<h2></h2>
-				<p></p>
-				<a href="#"></a>
-			</figcaption>
-		</figure>
+		<section class="previewer-large">
+			<figure>
+				<img src="#" alt="previewer gym apparel">
+				<figcaption>
+					<!-- same size as h1 -->
+					<h2>Power Built On Precision</h2>
+					<p>The latest in 315.</p>
+					<a href="#">Shop now</a>
+				</figcaption>
+			</figure>
+		</section>
 
 		<!-- Male products section -->
 		<section>
-			<p></p>
-			<h2></h2>
-			<a href=""></a>
+			<p>Mens</p>
+			<h2>New releases</h2>
+			<a href="">View all</a>
 
-			<ul>
+			<ul class="previewer-small">
 				<li>
-					<figure id="previewer-small">
+					<figure>
 						<img src="" alt="">
 						<figcaption>
-							<p></p>
-							<h3></h3>
-							<p></p>
-							<p class="price-text"></p>
+							<p>new</p>
+							<h3>315 Tank</h3>
+							<p>Black</p>
+							<p class="price">40€</p>
 						</figcaption>
 					</figure>
 				</li>
 
 				<li>
-					<figure id="previewer-small">
+					<figure>
 						<img src="" alt="">
 						<figcaption>
-							<p></p>
-							<h3></h3>
-							<p></p>
-							<p class="price-text"></p>
+							<p>new</p>
+							<h3>315 Tank</h3>
+							<p>Smokey Grey</p>
+							<p class="price">40€</p>
 						</figcaption>
 					</figure>
 				</li>
 			</ul>
 		</section>
 
-		<!-- Together previewer -->
-		<figure id="previewer-large">
-			<img src="#" alt="previewer gym apparel">
-			<figcaption>
-				<!-- same size as h1 -->
-				<h2></h2>
-				<p></p>
-				<a href="#"></a>
-			</figcaption>
-		</figure>
+		<section class="previewer-large">
+			<figure>
+				<img src="#" alt="previewer gym apparel">
+				<figcaption>
+					<!-- same size as h1 -->
+					<h2>Whatever we do, we do it together</h2>
+					<p>From online communities to proud friends pushing for a PB, the people by our side help us go further together.</p>
+					<a href="#">Shop now</a>
+				</figcaption>
+			</figure>
+		</section>
 
-		<!-- double img previewer -->
-		<figure id="previewer-double">
-			<img src="#" alt="previewer gym apparel">
-			<figcaption>
-				<!-- same size as h1 -->
-				<h2></h2>
-				<a href="#"></a>
-			</figcaption>
-		</figure>
-		<figure id="previewer-double">
-			<img src="#" alt="previewer gym apparel">
-			<figcaption>
-				<!-- same size as h1 -->
-				<h2></h2>
-				<a href="#"></a>
-			</figcaption>
-		</figure>
+		<section>
+			<!-- double img previewer -->
+			<figure id="previewer-double">
+				<img src="#" alt="previewer gym apparel">
+				<figcaption>
+					<!-- same size as h1 -->
+					<h2>Shop womans</h2>
+					<a href="#">Explore</a>
+				</figcaption>
+			</figure>
+			<figure id="previewer-double">
+				<img src="#" alt="previewer gym apparel">
+				<figcaption>
+					<!-- same size as h1 -->
+					<h2>Shop mens</h2>
+					<a href="#">Explore</a>
+				</figcaption>
+			</figure>
+		</section>
 
 		<!-- discount slider with article -->
 		<ul>
 			<li>
-				<h2></h2>
-				<a href="#"></a>
+				<h2>Student discount</h2>
+				<a href="#">Read more</a>
 			</li>
 			<li></li>
 		</ul>
 
 		<article>
-			<h3></h3>
-			<p></p>
+			<h3>More than your best workout clothing</h3>
+			<p>The Gymshark community is devoted to unlocking potential through conditioning and the things we do today to prepare for tomorrow.
+				When it comes to performing at your max, there should be no obstacles – least of all your workout clothes.
+				So everything about the gym clothes and accessories we design for you has your progress and the best results in mind.
+				We want you to have the most comfortable gym hoodies, the most supportive seamless leggings and the most innovatively designed workout shirts that are made to move when it matters most.
+			</p>
 		</article>
 	</main>
 
 	<footer>
 		<section>
-			<p><strong></strong><strong></strong><strong></strong></p>
-			<a href=""></a>
+			<p>Sign up to our <strong>newsletter</strong> for the <strong>latest news</strong> and <strong>exclusive deals</strong></p>
+			<a href="">Sign up</a>
 
-			<a href=""></a>
+			<a href="">My account <img src="" alt="user icon"></a>
 		</section>
 
 		<section>
 			<!-- help and pages buttons -->
 			<ul>
-				<li><button></button></li>
-				<li><button></button></li>
+				<a href=""><li>Help<button>+</button></li></a>
+				<a href=""><li>Pages<button>+</button></li></a>
 			</ul>
 
-			<h3></h3>
+			<h3>More about gymshark</h3>
 
 			<!-- blog and mail links -->
-			<figure>
-				<a href=""><img src="" alt=""></a>
-				<figcaption></figcaption>
-			</figure>
-			<figure>
-				<a href=""><img src="" alt=""></a>
-				<figcaption></figcaption>
-			</figure>
+			<a href="">
+				<figure>
+					<img src="" alt="">
+					<figcaption>Blog</figcaption>
+				</figure>
+			</a>
+			
+			<a href="">
+				<figure>
+					<img src="" alt="">
+					<figcaption>Newsletter</figcaption>
+				</figure>
+			</a>
 
 			<!-- social links -->
 			<ul>
-				<li><a href=""></a></li>
-				<li><a href=""></a></li>
-				<li><a href=""></a></li>
-				<li><a href=""></a></li>
-				<li><a href=""></a></li>
-				<li><a href=""></a></li>
+				<li><a href=""><img src="" alt=""></a></li>
+				<li><a href=""><img src="" alt=""></a></li>
+				<li><a href=""><img src="" alt=""></a></li>
+				<li><a href=""><img src="" alt=""></a></li>
+				<li><a href=""><img src="" alt=""></a></li>
+				<li><a href=""><img src="" alt=""></a></li>
 			</ul>
 
 			<!-- terms of use, etc. links -->
 			<ul>
-				<li><a href=""></a></li>
-				<li><a href=""></a></li>
-				<li><a href=""></a></li>
-				<li><a href=""></a></li>
-				<li><a href=""></a></li>
+				<li><a href="">Terms & conditions</a></li>
+				<li><a href="">Terms of use</a></li>
+				<li><a href="">Privacy Notice</a></li>
+				<li><a href="">Cookie policy</a></li>
+				<li><a href="">Modern Slavery</a></li>
 			</ul>
 
 			<!-- payment methods-->
@@ -222,7 +236,7 @@
 				<li><img src="" alt=""></li>
 			</ul>
 			
-			<p></p>
+			<p>© 2021 | Gymshark Limited | All Rights Reserved | Be a visionary</p>
 		</section>
 	</footer>
 
