added: promotion slider and started on article

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<figcaption>
 					<h1>Gymshark x <span>Whitney Simmons</span></h1>
 					<p>Embrace your journey in the new collection.</p>
-					<a href="#">Shop now</a>
+					<a href="#" class="cta-btn">Shop now</a>
 				</figcaption>
 			</figure>
 		</section>
@@ -92,7 +92,7 @@
 					
 					<h2>New coming through</h2>
 					<p>The latest in Recess</p>
-					<a href="#">Shop now</a>
+					<a href="#" class="cta-btn">Shop now</a>
 				</figcaption>
 			</figure>
 		</section>
@@ -143,7 +143,7 @@
 				<figcaption>
 					<h2>Power built on precision</h2>
 					<p>The latest 315</p>
-					<a href="#">Shop now</a>
+					<a href="#" class="cta-btn">Shop now</a>
 				</figcaption>
 			</figure>
 		</section>
@@ -195,7 +195,7 @@
 					<p>From online communities to proud friends pushing for a PB,
 						the people by our side help us go further together.
 					</p>
-					<a href="#">Get involved</a>
+					<a href="#" class="cta-btn">Get involved</a>
 				</figcaption>
 			</figure>
 		</section>
@@ -205,40 +205,42 @@
 				<img src="images/Shop_Womens_032025a4-f6a6-489f-ad50-e1b815e84603_1900x.webp" alt="shop female section call to action">
 				<figcaption>
 					<h2>Shop <span>womans</span></h2>
-					<a href="#">Shop now</a>
+					<a href="#" class="cta-btn">Shop now</a>
 				</figcaption>
 			</figure>
 			<figure>
 				<img src="images/Shop_Mens_459b926f-8130-4ce3-9b16-7697414331f7_1900x.webp" alt="shop male section call to action">
 				<figcaption>
 					<h2>Shop <span>mens</span></h2>
-					<a href="#">Shop now</a>
+					<a href="#" class="cta-btn">Shop now</a>
 				</figcaption>
 			</figure>
 		</section>
-
-		<!-- <ul class="info-slider">
-			<a href="">
+		
+		<section class="info-slider">
+			<ul>
 				<li>
-					<h2>Emergency Service & <span>NHS discount</span></h2>
-					<a href="#">Read more</a>
+					<a href="">
+						<h2>Emergency Service & <span>NHS discount</span></h2>
+						<a href="#" class="cta-btn">Read more</a>	
+					</a>
 				</li>
-			</a>
-			<a href="">
 				<li>
-					<h2>Student discount</h2>
-					<a href="#">Read more</a>
+					<a href="">
+						<h2>Student discount</h2>
+						<a href="#" class="cta-btn">Read more</a>	
+					</a>
 				</li>
-			</a>
-			<a href="">
 				<li>
-					<h2>Pay in 4 with clearpay</h2>
-					<a href="#">Read more</a>
+					<a href="">
+						<h2>Pay in 4 with clearpay</h2>
+						<a href="#" class="cta-btn">Read more</a>	
+					</a>
 				</li>
-			</a>
-		</ul> -->
-
-		<!-- <article>
+			</ul>
+		</section>
+		
+		<article>
 			<h3>More than your best workout clothing</h3>
 			<p>The Gymshark community is devoted to unlocking potential through conditioning and the things we do today to prepare for tomorrow.
 				When it comes to performing at your max, there should be no obstacles – least of all your workout clothes.
@@ -248,7 +250,7 @@
 		</article>
 	</main>
 
-	<footer>
+	<!-- <footer>
 		<section>
 			<p>Sign up to our <strong>newsletter</strong> for the <strong>latest news</strong> and <strong>exclusive deals</strong></p>
 			<a href="">Sign up</a>
