added article styling

--- a/index.html
+++ b/index.html
@@ -250,14 +250,14 @@
 		</article>
 	</main>
 
-	<!-- <footer>
+	<footer>
 		<section>
 			<p>Sign up to our <strong>newsletter</strong> for the <strong>latest news</strong> and <strong>exclusive deals</strong></p>
 			<a href="">Sign up</a>
 
 			<a href="">My account <img src="" alt="user icon"></a>
 		</section>
-
+<!-- 
 		<section>
 			<ul>
 				<a href=""><li>Help<button>+</button></li></a>
@@ -306,8 +306,8 @@
 			</ul>
 			
 			<p>© 2021 | Gymshark Limited | All Rights Reserved | Be a visionary</p>
-		</section>
-	</footer> -->
+		</section> -->
+	</footer>
 
 	<script src="scripts/script.js"></script>
 </body>
