--- a/index.html
+++ b/index.html
@@ -220,19 +220,19 @@
 		<section class="info-slider">
 			<ul>
 				<li>
-					<a href="">
+					<a href="#">
 						<h2>Emergency Service & <span>NHS discount</span></h2>
 						<a href="#" class="cta-btn">Read more</a>	
 					</a>
 				</li>
 				<li>
-					<a href="">
+					<a href="#">
 						<h2>Student discount</h2>
 						<a href="#" class="cta-btn">Read more</a>	
 					</a>
 				</li>
 				<li>
-					<a href="">
+					<a href="#">
 						<h2>Pay in 4 with clearpay</h2>
 						<a href="#" class="cta-btn">Read more</a>	
 					</a>
@@ -252,18 +252,22 @@
 
 	<footer>
 		<section>
-			<p>Sign up to our <strong>newsletter</strong> for the <strong>latest news</strong> and <strong>exclusive deals</strong></p>
-			<a href="">Sign up</a>
-
-			<a href="">My account <img src="" alt="user icon"></a>
+			<section>
+				<p>Sign up to our <strong>newsletter</strong> for the <strong>latest news</strong> and <strong>exclusive deals</strong></p>
+				<a href="" class="cta-btn">Sign up</a>
+			</section>
 		</section>
-<!-- 
+
+		<a href="">My account</a>
+
 		<section>
 			<ul>
 				<a href=""><li>Help<button>+</button></li></a>
 				<a href=""><li>Pages<button>+</button></li></a>
 			</ul>
+		</section>
 
+		<section>
 			<h3>More about gymshark</h3>
 
 			<a href="">
@@ -279,6 +283,7 @@
 					<figcaption>Newsletter</figcaption>
 				</figure>
 			</a>
+		</section>
 
 			<ul>
 				<li><a href=""><img src="" alt=""></a></li>
@@ -306,7 +311,6 @@
 			</ul>
 			
 			<p>© 2021 | Gymshark Limited | All Rights Reserved | Be a visionary</p>
-		</section> -->
 	</footer>
 
 	<script src="scripts/script.js"></script>
