pushed for feedback

--- a/index.html
+++ b/index.html
@@ -286,6 +286,13 @@
 					<figcaption>Newsletter</figcaption>
 				</figure>
 			</a>
+
+			<a href="">
+				<figure>
+					<img src="" alt="">
+					<figcaption>Newsletter</figcaption>
+				</figure>
+			</a>
 		</section>
 
 			<ul>
