--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<nav>
 			<ul>
 				<li>
-					<button><svg viewBox="0 0 24 16" version="1.1" xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="29d87d45-e24d-441d-9c09-38dc67d7021f"><title id="29d87d45-e24d-441d-9c09-38dc67d7021f">Burger</title><path d="M0,18 L24,18 L24,16 L0,16 L0,18 Z M0,10 L24,10 L24,8 L0,8 L0,10 Z M0,0 L0,2 L24,2 L24,0 L0,0 Z"></path></svg></button>
+					<button id="menu-button" tabindex="0"><svg viewBox="0 0 24 16" version="1.1" xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="29d87d45-e24d-441d-9c09-38dc67d7021f"><title id="29d87d45-e24d-441d-9c09-38dc67d7021f">Burger</title><path d="M0,18 L24,18 L24,16 L0,16 L0,18 Z M0,10 L24,10 L24,8 L0,8 L0,10 Z M0,0 L0,2 L24,2 L24,0 L0,0 Z"></path></svg></button>
 					<button><svg viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="7c3063e0-da00-48be-8741-8dcce793d67f"><title id="7c3063e0-da00-48be-8741-8dcce793d67f">Search</title><g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"><g transform="translate(-1217.000000, -57.000000)" fill="#000000" fill-rule="nonzero"><g><path d="M1236.59048,75.4247619 L1231.82238,70.6566667 C1233.00429,69.2157143 1233.71667,67.37 1233.71667,65.3583333 C1233.71667,60.7440476 1229.97262,57 1225.35833,57 C1220.74,57 1217, 60.7440476 1217,65.3583333 C1217,69.972619 1220.74,73.7166667 1225.35833,73.7166667 C1227.37,73.7166667 1229.21167,73.0083333 1230.65262,71.8264286 L1235.42071,76.5904762 C1235.74452,76.9142857 1236.26667,76.9142857 1236.59048,76.5904762 C1236.91429,76.2707143 1236.91429,75.7445238 1236.59048,75.4247619 Z M1225.35833,72.0530952 C1221.66286,72.0530952 1218.65952,69.0497619 1218.65952,65.3583333 C1218.65952,61.6669048 1221.66286,58.6595238 1225.35833,58.6595238 C1229.04976,58.6595238 1232.05714,61.6669048 1232.05714,65.3583333 C1232.05714,69.0497619 1229.04976,72.0530952 1225.35833,72.0530952 Z"/></g></g></g></svg></button>
 				</li>
 				<li><a href="#"><svg aria-labelledby="fdc4676d-818c-4c16-9b59-a00e627ab5fb" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 145 111"><title id="fdc4676d-818c-4c16-9b59-a00e627ab5fb">Gymshark Logo</title><path fill="#000" fill-rule="evenodd" d="M0 0l104.026 17.59-42.34 64.842h-3.602l-5.898 5.845-6.209-5.845h-1.648l-5.987 5.943-5.942-5.943h-2.011l-5.954 5.953-6.138-5.953H0l24.167 9.405 6.502-3.088 3.649 7.064 1.825.7 7.458-3.682 3.911 8.221 1.543.518-5.473 8.517L144.025.001H0z" clip-rule="evenodd"/><path fill="#000" fill-rule="evenodd" d="M17.102 24.983l42.354 10.042-18.214 1.997-24.14-12.04z" clip-rule="evenodd"/></svg></a></li>
@@ -64,7 +64,7 @@
 								<p>new</p>
 								<h3>Whitney Mesh Sports Bra</h3>
 								<p>Dandelion Brown</p>
-								<p class="price">65€</p>
+								<p>65€</p>
 							</figcaption>
 						</figure>
 					</li>
@@ -78,7 +78,7 @@
 								<p>new</p>
 								<h3>Whitney Mesh Leggings</h3>
 								<p>Black</p>
-								<p class="price">55€</p>
+								<p>55€</p>
 							</figcaption>
 						</figure>
 					</li>
