--- a/mens_shop.html
+++ b/mens_shop.html
@@ -19,10 +19,10 @@
 		<nav>
 			<ul>
 				<li>
-					<button><svg viewBox="0 0 24 16" version="1.1" xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="29d87d45-e24d-441d-9c09-38dc67d7021f"><title id="29d87d45-e24d-441d-9c09-38dc67d7021f">Burger</title><path d="M0,18 L24,18 L24,16 L0,16 L0,18 Z M0,10 L24,10 L24,8 L0,8 L0,10 Z M0,0 L0,2 L24,2 L24,0 L0,0 Z"></path></svg></button>
+					<button id="open-button"><svg viewBox="0 0 24 16" version="1.1" xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="29d87d45-e24d-441d-9c09-38dc67d7021f"><title id="29d87d45-e24d-441d-9c09-38dc67d7021f">Burger</title><path d="M0,18 L24,18 L24,16 L0,16 L0,18 Z M0,10 L24,10 L24,8 L0,8 L0,10 Z M0,0 L0,2 L24,2 L24,0 L0,0 Z"></path></svg></button>
 					<button><svg viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="7c3063e0-da00-48be-8741-8dcce793d67f"><title id="7c3063e0-da00-48be-8741-8dcce793d67f">Search</title><g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"><g transform="translate(-1217.000000, -57.000000)" fill="#000000" fill-rule="nonzero"><g><path d="M1236.59048,75.4247619 L1231.82238,70.6566667 C1233.00429,69.2157143 1233.71667,67.37 1233.71667,65.3583333 C1233.71667,60.7440476 1229.97262,57 1225.35833,57 C1220.74,57 1217, 60.7440476 1217,65.3583333 C1217,69.972619 1220.74,73.7166667 1225.35833,73.7166667 C1227.37,73.7166667 1229.21167,73.0083333 1230.65262,71.8264286 L1235.42071,76.5904762 C1235.74452,76.9142857 1236.26667,76.9142857 1236.59048,76.5904762 C1236.91429,76.2707143 1236.91429,75.7445238 1236.59048,75.4247619 Z M1225.35833,72.0530952 C1221.66286,72.0530952 1218.65952,69.0497619 1218.65952,65.3583333 C1218.65952,61.6669048 1221.66286,58.6595238 1225.35833,58.6595238 C1229.04976,58.6595238 1232.05714,61.6669048 1232.05714,65.3583333 C1232.05714,69.0497619 1229.04976,72.0530952 1225.35833,72.0530952 Z"/></g></g></g></svg></button>
 				</li>
-				<li><a href="#"><svg aria-labelledby="fdc4676d-818c-4c16-9b59-a00e627ab5fb" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 145 111"><title id="fdc4676d-818c-4c16-9b59-a00e627ab5fb">Gymshark Logo</title><path fill="#000" fill-rule="evenodd" d="M0 0l104.026 17.59-42.34 64.842h-3.602l-5.898 5.845-6.209-5.845h-1.648l-5.987 5.943-5.942-5.943h-2.011l-5.954 5.953-6.138-5.953H0l24.167 9.405 6.502-3.088 3.649 7.064 1.825.7 7.458-3.682 3.911 8.221 1.543.518-5.473 8.517L144.025.001H0z" clip-rule="evenodd"/><path fill="#000" fill-rule="evenodd" d="M17.102 24.983l42.354 10.042-18.214 1.997-24.14-12.04z" clip-rule="evenodd"/></svg></a></li>
+				<li><a href="index.html"><svg aria-labelledby="fdc4676d-818c-4c16-9b59-a00e627ab5fb" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 145 111"><title id="fdc4676d-818c-4c16-9b59-a00e627ab5fb">Gymshark Logo</title><path fill="#000" fill-rule="evenodd" d="M0 0l104.026 17.59-42.34 64.842h-3.602l-5.898 5.845-6.209-5.845h-1.648l-5.987 5.943-5.942-5.943h-2.011l-5.954 5.953-6.138-5.953H0l24.167 9.405 6.502-3.088 3.649 7.064 1.825.7 7.458-3.682 3.911 8.221 1.543.518-5.473 8.517L144.025.001H0z" clip-rule="evenodd"/><path fill="#000" fill-rule="evenodd" d="M17.102 24.983l42.354 10.042-18.214 1.997-24.14-12.04z" clip-rule="evenodd"/></svg></a></li>
 				<li><button><svg width="16" height="18" viewBox="0 0 16 18" xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="76a5afc9-c1a5-46f6-a6a2-1be6c4cf3672"><title id="76a5afc9-c1a5-46f6-a6a2-1be6c4cf3672">Bag</title><path fill-rule="evenodd" clip-rule="evenodd" d="M12.2121 3.55H15.8V18H0.5V3.55H4.08793C4.4824 1.6705 6.15692 0.25 8.15 0.25C10.1431 0.25 11.8176 1.6705 12.2121 3.55ZM10.6589 3.55C10.3193 2.55725 9.40342 1.8238 8.31676 1.75525L8.15 1.75C6.99106 1.75 5.99789 2.50685 5.64105 3.55H10.6589ZM14.299 5.049H1.999V16.499H14.299V5.049Z" fill="black"/></svg></button></li>
 			</ul>
 		</nav>
@@ -47,7 +47,91 @@
 			<li><button>Underwear (3)</button></li>
 		</ul>
 
-
+		<fieldset>
+			<section>
+				<button id="close-button"><svg class="Styles__CloseIcon-ykn9gp-5 bktttp" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="74cbeaf5-3883-4504-87b2-60563a73ca52"><title id="74cbeaf5-3883-4504-87b2-60563a73ca52">Close</title><path fill-rule="evenodd" clip-rule="evenodd" d="M17.5273 1.41613L16.4667 0.355469L8.99998 7.82214L1.53332 0.355469L0.472656 1.41613L7.93932 8.8828L0.472656 16.3495L1.53332 17.4101L8.99998 9.94346L16.4667 17.4101L17.5273 16.3495L10.0606 8.8828L17.5273 1.41613Z" fill="black"></path></svg></button>
+				<button><svg viewBox="0 0 18 18"  xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="7110a786-5256-4d96-a440-1ac8add0f1ed"><title id="7110a786-5256-4d96-a440-1ac8add0f1ed">Account</title><path d="M13.5 4.79092C13.5 2.53192 11.4849 0.700012 9 0.700012L8.782 0.704731C6.39831 0.808141 4.5 2.59836 4.5 4.79092V5.6091C4.5 7.8681 6.5151 9.70001 9 9.70001L9.218 9.69529C11.6017 9.59188 13.5 7.80166 13.5 5.6091V4.79092ZM8.84702 2.20332L9.014 2.19901L9.18583 2.20488C10.7822 2.28873 12 3.44567 12 4.79092V5.6091L11.9946 5.76395C11.9049 7.04676 10.7094 8.12918 9.15298 8.1967L8.96754 8.20036L8.78519 8.19546C7.21783 8.1113 6 6.95435 6 5.6091V4.79092L6.0054 4.63607C6.09507 3.35326 7.29059 2.27084 8.84702 2.20332ZM15.3594 12.6468C13.6548 12.1815 11.3274 11.7 9 11.7C6.6726 11.7 4.3452 12.1815 2.6406 12.6468C1.0773 13.0725 0 14.4972 0 16.1172V18H18V16.1172L17.9949 15.9238C17.913 14.3848 16.8602 13.0555 15.3594 12.6468ZM3.03471 14.0941C5.07704 13.5366 7.12428 13.2 9 13.2C10.8757 13.2 12.923 13.5366 14.9644 14.0939L15.1214 14.1434C15.9428 14.4386 16.5 15.2247 16.5 16.1172V16.499H1.5V16.1172L1.50646 15.9512C1.57496 15.0735 2.1823 14.3262 3.03471 14.0941Z"></path></svg></button>
+				<button><svg viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="7c3063e0-da00-48be-8741-8dcce793d67f"><title id="7c3063e0-da00-48be-8741-8dcce793d67f">Search</title><g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"><g transform="translate(-1217.000000, -57.000000)" fill="#000000" fill-rule="nonzero"><g><path d="M1236.59048,75.4247619 L1231.82238,70.6566667 C1233.00429,69.2157143 1233.71667,67.37 1233.71667,65.3583333 C1233.71667,60.7440476 1229.97262,57 1225.35833,57 C1220.74,57 1217, 60.7440476 1217,65.3583333 C1217,69.972619 1220.74,73.7166667 1225.35833,73.7166667 C1227.37,73.7166667 1229.21167,73.0083333 1230.65262,71.8264286 L1235.42071,76.5904762 C1235.74452,76.9142857 1236.26667,76.9142857 1236.59048,76.5904762 C1236.91429,76.2707143 1236.91429,75.7445238 1236.59048,75.4247619 Z M1225.35833,72.0530952 C1221.66286,72.0530952 1218.65952,69.0497619 1218.65952,65.3583333 C1218.65952,61.6669048 1221.66286,58.6595238 1225.35833,58.6595238 C1229.04976,58.6595238 1232.05714,61.6669048 1232.05714,65.3583333 C1232.05714,69.0497619 1229.04976,72.0530952 1225.35833,72.0530952 Z"/></g></g></g></svg></button>
+			</section>
+	
+			<section>
+				<a href="#">Womens</a>
+				<a href="mens_shop.html">Mens</a>
+			</section>
+	
+				
+			<nav>
+				<ul>
+					<li>
+						<h2>Products</h2>
+						<ul>
+							<a href="mens_shop.html"><li>New Releases</li></a>
+							<a href="mens_shop.html"><li>All Products</li></a>
+							<a href="mens_shop.html"><li>Bottoms & Leggings</li></a>
+							<a href="mens_shop.html"><li>Crop Tops</li></a>
+							<a href="mens_shop.html"><li>Hoodies & Jackets</li></a>
+							<a href="mens_shop.html"><li>Shorts</li></a>
+							<a href="mens_shop.html"><li>T Shirts & Tops</li><li>Sports Bras</li></a>
+							<a href="mens_shop.html"><li>Underwear</li></a>
+							<a href="mens_shop.html"><li>Vests</li></a>
+						</ul>
+					</li>
+					<li>
+						<h2>Collections</h2>
+						<ul>
+							<a href="mens_shop.html"><li>Adapt</li></a>
+							<a href="mens_shop.html"><li>Energy</li></a>
+							<a href="mens_shop.html"><li>Essentials</li></a>
+							<a href="mens_shop.html"><li>Flex</li></a>
+							<a href="mens_shop.html"><li>Seamless</li></a>
+							<a href="mens_shop.html"><li>Seamless Fit</li></a>
+							<a href="mens_shop.html"><li>Vital</li></a>
+							<a href="mens_shop.html"><li>Whitney Simmons</li></a>
+						</ul>
+					</li>
+					<li>
+						<h2>Accesories</h2>
+						<ul>
+							<a href="#"><li>Accesories</li></a>
+							<a href="#"><li>Equipment</li></a>
+							<a href="#"><li>Socks</li></a>
+							<a href="#"><li>Bottles</li></a>
+							<a href="#"><li>Bags</li></a>
+							<a href="#"><li>Headwear</li></a>		
+						</ul>
+					</li>
+					<li>
+						<h2>Trending</h2>
+						<ul>
+							<a href="#"><li>Must-Haves</li></a>
+							<a href="#"><li>Outlet</li></a>
+							<a href="#"><li>Running</li></a>
+							<a href="#"><li>E-Gift Card</li></a>					
+						</ul>
+					</li>
+				</ul>
+			</nav>
+			<!-- Door tijd nood is het niet gelukt om de rest van het menu af te maken, ik laat dit wel staan voor wanneer ik het af maak -->
+	
+			<!-- <section>
+				<h3>Featured</h3>
+				<ul>
+					<a href="#">
+						<li>
+							<img src="images/NAVIGATION_WOMENS.jpg" alt="promotional image for the Central community">
+							<h2>Blog</h2>
+						</li>
+					</a>
+						
+					<a href="#">
+						<li>
+							<img src="images/Womens-Must-Haves-Nav.jpg" alt="image to hint towards subscribing to the newsletter">
+							<h2>Newsletter</h2>
+						</li>
+					</a>
+				</ul>
+			</section> -->
+		</fieldset>
 	</header>
 
 	<!-- start Main -->
