--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 		</nav>
 
 		<ul>
-			<a href="#"><li>Shop new mens</li></a>
-			<a href="#"><li>Shop new womans</li></a>
+			<a href="mens_shop.html"><li>Shop new mens</li></a>
+			<a href="mens_shop.html"><li>Shop new womans</li></a>
 		</ul>
 
 		
@@ -40,7 +40,7 @@
 			</section>
 	
 			<section>
-				<a href="#">Womens</a>
+				<a href="mens_shop.html">Womens</a>
 				<a href="mens_shop.html">Mens</a>
 			</section>
 	
@@ -77,21 +77,21 @@
 					<li>
 						<h2>Accesories</h2>
 						<ul>
-							<a href="#"><li>Accesories</li></a>
-							<a href="#"><li>Equipment</li></a>
-							<a href="#"><li>Socks</li></a>
-							<a href="#"><li>Bottles</li></a>
-							<a href="#"><li>Bags</li></a>
-							<a href="#"><li>Headwear</li></a>		
+							<a href="mens_shop.html"><li>Accesories</li></a>
+							<a href="mens_shop.html"><li>Equipment</li></a>
+							<a href="mens_shop.html"><li>Socks</li></a>
+							<a href="mens_shop.html"><li>Bottles</li></a>
+							<a href="mens_shop.html"><li>Bags</li></a>
+							<a href="mens_shop.html"><li>Headwear</li></a>		
 						</ul>
 					</li>
 					<li>
 						<h2>Trending</h2>
 						<ul>
-							<a href="#"><li>Must-Haves</li></a>
-							<a href="#"><li>Outlet</li></a>
-							<a href="#"><li>Running</li></a>
-							<a href="#"><li>E-Gift Card</li></a>					
+							<a href="mens_shop.html"><li>Must-Haves</li></a>
+							<a href="mens_shop.html"><li>Outlet</li></a>
+							<a href="mens_shop.html"><li>Running</li></a>
+							<a href="mens_shop.html"><li>E-Gift Card</li></a>					
 						</ul>
 					</li>
 				</ul>
@@ -101,7 +101,6 @@
 
 	<!-- start Main -->
 	<main>
-		
 		<section class="previewer-large">
 			<figure>
 				<img src="images/Whitney_Mobile_Banners_DUTCH_750x.jpeg" alt="Previewer gym apparel">
